# fastapi-sqlmodel-boilerplate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: unit.py
app/core/: config.py  logger.py  logging.py
app/db/: schema.py  session.py
app/models/: unit.py
app/services/: unit_service.py
tests/: conftest.py  test_units.py
